[package]
authors = [
  "International Centre for Neuromorphic Systems",
  "Alexandre Marcireau",
]
description = "Neuromorphic devices drivers"
documentation = "https://docs.rs/neuromorphic-drivers/"
edition = "2021"
homepage = "https://github.com/neuromorphicsystems/neuromorphic-rs/"
license-file = "../LICENSE"
name = "neuromorphic-drivers"
readme = "../README.md"
repository = "https://github.com/neuromorphicsystems/neuromorphic-rs/"
version = "0.14.0"

[dependencies]
bincode = "1.3"
libc = "0.2"
libusb1-sys = "0.7"
neuromorphic-types = {path = "../types"}
paste = "1.0"
rusb = {version = "0.9.4", features = ["vendored"]}
serde = {version = "1.0", features = ["derive"]}
thiserror = "1.0"
