[package]
authors = [
  "International Centre for Neuromorphic Systems",
  "Alexandre Marcireau",
]
description = "Shared Neuromorphic data types for drivers and processing frameworks"
documentation = "https://docs.rs/neuromorphic-types/"
edition = "2021"
homepage = "https://github.com/neuromorphicsystems/neuromorphic-rs/"
license-file = "../LICENSE"
name = "neuromorphic-types"
readme = "../README.md"
repository = "https://github.com/neuromorphicsystems/neuromorphic-rs/"
version = "0.5.0"
